--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ['1.8', 'nightly']
+        version: ['1', '1.8', 'nightly']
         os: [ubuntu-latest, windows-latest, macOS-latest]
         arch: [x64]
     steps:
