--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,12 @@ uuid = "99fbed13-29b3-4502-a852-adc41241e91d"
 authors = ["Snuoru <s@sunoru.com>"]
 version = "0.1.0"
 
+[deps]
+MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
+
 [compat]
 julia = "1.8"
+MLStyle = "0.4"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
