Add inplace functions.

--- a/benchmark/Project.toml
+++ b/benchmark/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+AES = "5a3fb44e-d90d-11e9-053b-99581e1bac63"
 AESNI = "99fbed13-29b3-4502-a852-adc41241e91d"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Nettle = "49dea1ee-f6fa-5aa6-9a11-8816cee7d4b9"
